# cloud-bot-deploy-template

./: Dockerfile  LICENSE  README.md  compose.yaml  deployment.yaml  ecs-service-def.json  ecs-task-def.json  ecspresso.yml  pyproject.toml
.github/workflows/: ci.yml  ecs.yml  google.yml  ssh.yml
src/function_bot/: __main__.py  main.py
src/monolithic_bot_copy_2/: __main__.py  main.py
task_definitions/: monolithic_bot.json
